--- a/algo-design.ipynb
+++ b/algo-design.ipynb
@@ -1,55 +1,26 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.6 64-bit ('base': venv)"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "c7a8daee49359dee59c5e239bd72bc926cbb1465e18dcc7a1581e36b7564027e"
-   }
-  },
-  "interpreter": {
-   "hash": "c7a8daee49359dee59c5e239bd72bc926cbb1465e18dcc7a1581e36b7564027e"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Algorithm design problems\n",
     "### Here you can find solution to several algorithm design problems, covering topics: recursion, sorting, searching, dynamic programmic etc. The source of these problems are:\n",
     "### 1. The Algorithm Design Manual, by Steven S. Skiena\n",
     "# \n",
     "## I keep on updating this notebook, so check back after sometime for new problems. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Movie scheduling problem. From source 1, chapter 1\n",
     "### Input: a set I of n intervals on the line\n",
     "### Output: largest set of mutually non-overlapping intervals which can be selected from I\n",
     "### Problem definition: A movie star has been presented offers to star in n different movie projects. Each offer comes specified with the fisrt and last day       of filming. To take any offer, The star cannot accept any two jobs whose intervals overlap. Each of these movies offer same amount of                          money independent of the interval period.\n",
     "### Goal: Make as much money as possible. => identify the largest possible set of jobs/movie offers such that no two of them conflict with each other. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -62,12 +33,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## optimal solution for movie scheduling problem\n",
     "### in recursion, select the movie which terminates first: the movie for which right-most value is leftmost in all intervals"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -97,8 +68,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "False\n"
      ]
@@ -142,21 +113,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "CPU times: user 29 µs, sys: 0 ns, total: 29 µs\nWall time: 34.3 µs\n"
+      "CPU times: user 29 µs, sys: 0 ns, total: 29 µs\n",
+      "Wall time: 34.3 µs\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[(1, 2), (3, 4), (5, 7), (9, 10)]"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -165,6 +137,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Knapsack problem 1. From source 1, chapter 1:\n",
     "### Given a set of integers S={s1, s2, ..., sn}, and a target number T, find a subset of S which adds up exactly to T. For e.g.;\n",
@@ -185,9 +159,7 @@
     "    drop first element from S\n",
     "    repeat the for loop\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -239,14 +211,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[]"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,14 +231,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[10, 9, 2, 1]"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -280,5 +252,36 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.3 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "c7a8daee49359dee59c5e239bd72bc926cbb1465e18dcc7a1581e36b7564027e"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
